test/conformance/chainsaw/exceptions/applies-to-delete/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: delta-exception
  namespace: kyverno
spec:
  exceptions:
  - policyName: psa
    ruleNames:
    - "*"
  match:
    any:
    - resources:
        kinds:
        - Deployment
        namespaces:
        - reza-dev
        names:
        - test-dpl1*
