test/conformance/chainsaw/exceptions/applies-to-delete/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reza-dev
