test/conformance/chainsaw/exceptions/applies-to-delete/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
