test/conformance/chainsaw/exceptions/applies-to-delete/03-namespace.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: namespace
spec:
  timeouts: {}
  try:
  - apply:
      file: namespace.yaml
