test/conformance/chainsaw/exceptions/applies-to-delete/04-deployment.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: deployment
spec:
  timeouts: {}
  try:
  - apply:
      file: deployment.yaml
