test/conformance/chainsaw/exceptions/applies-to-delete/05-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: apps/v1
      kind: Deployment
      name: test-dpl1
      namespace: reza-dev
