test/conformance/chainsaw/exceptions/applies-to-delete/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: applies-to-delete
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: psa
  - name: step-02
    try:
    - apply:
        file: exception.yaml
  - name: step-03
    try:
    - apply:
        file: namespace.yaml
  - name: step-04
    try:
    - apply:
        file: deployment.yaml
  - name: step-05
    try:
    - delete:
        ref:
          apiVersion: apps/v1
          kind: Deployment
          name: test-dpl1
          namespace: reza-dev
